--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
   "devDependencies": {
     "babel-jest": "^4.0.0",
     "babelify": "^5.0.3",
+    "babel": "^4.4.5",
+    "babel-core": "^4.7.16",
     "browserify": "^9.0.3",
     "jest": "^0.1.37",
     "jest-cli": "^0.4.0"
   },
   "dependencies": {
-    "babel": "^4.4.5",
     "express": "^4.12.0",
     "react": "^0.12.2"
   }
