--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "./node_modules/babel/bin/babel-node server",
     "test": "jest",
-    "build-client": "./node_modules/browserify/bin/cmd.js client/index.js -t babelify --outfile dist/conchord-ui.js"
+    "build-client": "./node_modules/browserify/bin/cmd.js --debug client/index.js -t babelify --outfile dist/conchord-ui.js",
+    "watch-build-client": "watchify --debug client/index.js -t babelify --outfile dist/conchord-ui.js"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
@@ -27,18 +28,21 @@
   "author": "Yannick Dominguez",
   "license": "MIT",
   "devDependencies": {
-    "babel-jest": "^4.0.0",
-    "babelify": "^5.0.3",
+    "JSONStream": "^0.10.0",
     "babel": "^4.4.5",
     "babel-core": "^4.7.16",
+    "babel-jest": "^4.0.0",
+    "babelify": "^5.0.3",
     "browserify": "^9.0.3",
     "jest": "^0.1.37",
-    "jest-cli": "^0.4.0"
+    "jest-cli": "^0.4.0",
+    "through2": "^0.6.3"
   },
   "dependencies": {
     "express": "^4.12.0",
     "flux": "^2.0.1",
     "jquery": "^2.1.3",
-    "react": "^0.12.2"
+    "react": "^0.13.1",
+    "react-router": "^0.13.1"
   }
 }
