--- a/package.json
+++ b/package.json
@@ -28,18 +28,23 @@
   "author": "Yannick Dominguez",
   "license": "MIT",
   "devDependencies": {
-    "JSONStream": "^0.10.0",
     "babel": "^4.4.5",
     "babel-core": "^4.7.16",
     "babel-jest": "^4.0.0",
     "babelify": "^5.0.3",
     "browserify": "^9.0.3",
+    "connect-livereload": "^0.5.3",
+    "gulp": "^3.8.11",
+    "gulp-concat": "^2.5.2",
+    "gulp-jshint": "^1.9.4",
+    "gulp-livereload": "^3.8.0",
+    "gulp-react": "^3.0.1",
+    "gulp-util": "^3.0.4",
     "jest": "^0.1.37",
     "jest-cli": "^0.4.0",
-    "through2": "^0.6.3"
+    "express": "^4.12.0"
   },
   "dependencies": {
-    "express": "^4.12.0",
     "flux": "^2.0.1",
     "jquery": "^2.1.3",
     "react": "^0.13.1",
