--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.12.0",
     "gulp": "^3.8.11",
     "gulp-browserify": "^0.5.1",
+    "gulp-clean": "^0.3.1",
     "gulp-jshint": "^1.9.4",
     "gulp-livereload": "^3.8.0",
     "gulp-plumber": "^1.0.0",
