--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "flux": "^2.0.1",
     "jquery": "^2.1.3",
+    "object-assign": "^2.0.0",
     "react": "^0.13.1",
     "react-router": "^0.13.1"
   }
