--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "A UI for the conchord file format",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/babel/bin/babel-node server",
+    "start": "node server/app",
     "test": "NODE_ENV=test gulp dev && jest",
-    "build-client": "./node_modules/browserify/bin/cmd.js --debug client/index.js -t babelify --outfile dist/conchord-ui.js",
-    "watch-build-client": "watchify --debug client/index.js -t babelify --outfile dist/conchord-ui.js"
+    "postinstall": "gulp dev"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
@@ -28,21 +27,7 @@
   "author": "Yannick Dominguez",
   "license": "MIT",
   "devDependencies": {
-    "babel": "^4.4.5",
-    "babel-core": "^4.7.16",
     "babel-jest": "^4.0.0",
-    "babelify": "^5.0.3",
-    "browserify": "^9.0.3",
-    "connect-livereload": "^0.5.3",
-    "express": "^4.12.0",
-    "gulp": "^3.8.11",
-    "gulp-browserify": "^0.5.1",
-    "gulp-clean": "^0.3.1",
-    "gulp-jshint": "^1.9.4",
-    "gulp-livereload": "^3.8.0",
-    "gulp-plumber": "^1.0.0",
-    "gulp-react": "^3.0.1",
-    "gulp-util": "^3.0.4",
     "jest": "^0.1.37",
     "jest-cli": "^0.4.0"
   },
@@ -51,6 +36,21 @@
     "jquery": "^2.1.3",
     "object-assign": "^2.0.0",
     "react": "^0.13.1",
-    "react-router": "^0.13.1"
+    "react-router": "^0.13.1",
+    "express": "^4.12.0",
+
+    "gulp": "^3.8.11",
+    "gulp-browserify": "^0.5.1",
+    "gulp-clean": "^0.3.1",
+    "gulp-jshint": "^1.9.4",
+    "gulp-livereload": "^3.8.0",
+    "gulp-plumber": "^1.0.0",
+    "gulp-react": "^3.0.1",
+    "gulp-util": "^3.0.4",
+    "babelify": "^5.0.3",
+    "browserify": "^9.0.3",
+    "connect-livereload": "^0.5.3",
+    "babel": "^4.4.5",
+    "babel-core": "^4.7.16"
   }
 }
