--- a/package.json
+++ b/package.json
@@ -32,24 +32,25 @@
     "jest-cli": "^0.4.0"
   },
   "dependencies": {
-    "flux": "^2.0.1",
-    "jquery": "^2.1.3",
-    "object-assign": "^2.0.0",
-    "react": "^0.13.1",
-    "react-router": "^0.13.1",
+    "babel": "^4.4.5",
+    "babel-core": "^4.7.16",
+    "babelify": "^5.0.3",
+    "browserify": "^9.0.3",
+    "connect-livereload": "^0.5.3",
     "express": "^4.12.0",
+    "flux": "^2.0.1",
     "gulp": "^3.8.11",
     "gulp-browserify": "^0.5.1",
     "gulp-clean": "^0.3.1",
+    "gulp-compass": "^2.0.4",
     "gulp-jshint": "^1.9.4",
     "gulp-livereload": "^3.8.0",
     "gulp-plumber": "^1.0.0",
     "gulp-react": "^3.0.1",
     "gulp-util": "^3.0.4",
-    "babelify": "^5.0.3",
-    "browserify": "^9.0.3",
-    "connect-livereload": "^0.5.3",
-    "babel": "^4.4.5",
-    "babel-core": "^4.7.16"
+    "jquery": "^2.1.3",
+    "object-assign": "^2.0.0",
+    "react": "^0.13.1",
+    "react-router": "^0.13.1"
   }
 }
