--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server/app",
     "test": "NODE_ENV=test gulp dev && jest",
-    "release": "gulp dev && git add dist && git commit -m'release' && git push heroku master && git reset --hard HEAD~"
+    "release": "gulp dev && git add dist && git commit -m'release' && git push heroku master && git reset --hard HEAD~",
+    "postinstall": "bower install"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
@@ -35,11 +36,13 @@
     "babel": "^4.4.5",
     "babel-core": "^4.7.16",
     "babelify": "^5.0.3",
+    "bower": "^1.3.12",
     "browserify": "^9.0.3",
     "connect-livereload": "^0.5.3",
     "express": "^4.12.0",
     "flux": "^2.0.1",
     "gulp": "^3.8.11",
+    "gulp-bower": "0.0.10",
     "gulp-browserify": "^0.5.1",
     "gulp-clean": "^0.3.1",
     "gulp-compass": "^2.0.4",
