--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "gulp-react": "^3.0.1",
     "gulp-util": "^3.0.4",
     "jquery": "^2.1.3",
+    "lodash": "^3.6.0",
     "object-assign": "^2.0.0",
     "react": "^0.13.1",
     "react-router": "^0.13.1"
