--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babelify": "^5.0.3",
     "bower": "^1.3.12",
     "browserify": "^9.0.3",
+    "classnames": "^1.2.0",
     "connect-livereload": "^0.5.3",
     "express": "^4.12.0",
     "flux": "^2.0.1",
