--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "gulp-livereload": "^3.8.0",
     "gulp-plumber": "^1.0.0",
     "gulp-react": "^3.0.1",
+    "gulp-shell": "^0.4.0",
     "gulp-util": "^3.0.4",
     "jquery": "^2.1.3",
     "lodash": "^3.6.0",
