--- a/conchord-ui.cabal
+++ b/conchord-ui.cabal
@@ -19,7 +19,7 @@ executable conchord-ui
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7
+  build-depends:       base ==4.6.*
                      , wai
                      , warp
                      , http-types
