update location of licence file

--- a/conchord-ui.cabal
+++ b/conchord-ui.cabal
@@ -6,7 +6,7 @@ version:             0.1.0.0
 -- synopsis:            
 -- description:         
 license:             GPL-2
-license-file:        LICENSE
+license-file:        licence.md
 author:              yannick
 maintainer:          yannick.dominguez@gmail.com
 -- copyright:           
