--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A UI for the conchord file format",
   "main": "index.js",
   "scripts": {
-    "start": "node server/app",
+    "start": "PORT=5000 cabal run",
     "test": "NODE_ENV=test gulp dev && jest",
     "release": "gulp dev && git add dist && git commit -m'release' && git push heroku master -f && git reset --hard HEAD~",
     "postinstall": "bower install"
