--- a/package.json
+++ b/package.json
@@ -53,11 +53,14 @@
     "gulp-plumber": "^1.0.0",
     "gulp-react": "^3.0.1",
     "gulp-shell": "^0.4.0",
+    "gulp-sourcemaps": "^1.5.1",
+    "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.4",
     "jquery": "^2.1.3",
     "lodash": "^3.6.0",
     "object-assign": "^2.0.0",
     "react": "^0.13.1",
-    "react-router": "^0.13.1"
+    "react-router": "^0.13.1",
+    "vinyl-buffer": "^1.0.0"
   }
 }
