--- a/conchord-ui.cabal
+++ b/conchord-ui.cabal
@@ -23,6 +23,7 @@ executable conchord-ui
                      , wai
                      , warp
                      , http-types
+                     , split
                      , resourcet
                      , scotty
                      , text
@@ -45,4 +46,5 @@ test-suite spec
 
   build-depends: base
                , hspec
+               , text
 
