--- a/conchord-ui.cabal
+++ b/conchord-ui.cabal
@@ -20,6 +20,7 @@ executable conchord-ui
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base
+                     , hlint
                      , wai
                      , warp
                      , http-types
