--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,18 @@
-sudo: false
 language: haskell
-ghc: 7.8
+
 before_install:
 - gem install compass
+- wget -q -O- http://download.fpcomplete.com/ubuntu/fpco.key | sudo apt-key add -
+- echo 'deb http://download.fpcomplete.com/ubuntu/precise stable main' | sudo tee /etc/apt/sources.list.d/fpco.list
+- sudo apt-get update
+- sudo apt-get install stack -y
+
 install:
 - npm install
-- cabal install cabal-install
-- cabal update
-- cabal install alex happy
-- cabal install --only-dependencies --enable-tests
+- stack setup
 script:
 - npm test
-- $HOME/.cabal/bin/hlint server/src
-- cabal configure --enable-tests && cabal build && cabal test
+- stack test
 cache:
   bundler: true
   directories:
