--- a/package.json
+++ b/package.json
@@ -4,46 +4,57 @@
   "description": "A UI for the conchord file format",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test gulp dev",
+    "test": "NODE_ENV=test gulp dev && jest",
     "release": "gulp dev && git add dist && git commit -m'release' && git push heroku master -f && git reset --hard HEAD~",
     "postinstall": "bower install"
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+    "testFileExtensions": ["js"],
+    "moduleFileExtensions": ["js", "json"],
+    "unmockedModulePathPatterns": ["react", "flux", "classnames"]
   },
   "author": "Yannick Dominguez",
   "license": "MIT",
   "devDependencies": {
-    "babel": "^4.4.5",
-    "babel-core": "^4.7.16",
-    "babel-jest": "^4.0.0",
-    "babelify": "^5.0.3",
-    "browserify": "^9.0.3",
+    "babel": "^6.5.2",
+    "babel-core": "^6.6.0",
+    "babel-jest": "^6.0.1",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
     "connect-livereload": "^0.5.3",
     "gulp": "^3.8.11",
-    "gulp-bower": "0.0.10",
+    "gulp-babel": "^6.1.2",
+    "gulp-bower": "0.0.13",
     "gulp-browserify": "^0.5.1",
     "gulp-clean": "^0.3.1",
     "gulp-compass": "^2.0.4",
     "gulp-jest": "^0.4.0",
-    "gulp-jshint": "^1.9.4",
+    "gulp-jshint": "^2.0.0",
     "gulp-livereload": "^3.8.0",
     "gulp-plumber": "^1.0.0",
     "gulp-react": "^3.0.1",
-    "gulp-shell": "^0.4.0",
+    "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.4",
     "jest": "^0.1.37",
-    "jest-cli": "^0.4.0",
+    "jest-cli": "^0.8.2",
     "vinyl-buffer": "^1.0.0"
   },
   "dependencies": {
     "bower": "^1.3.12",
-    "classnames": "^1.2.0",
+    "classnames": "^2.2.3",
     "express": "^4.12.0",
     "flux": "^2.0.1",
     "jquery": "^2.1.3",
-    "lodash": "^3.6.0",
-    "object-assign": "^2.0.0",
-    "react": "^0.13.1",
-    "react-router": "^0.13.1"
+    "lodash": "^4.5.1",
+    "object-assign": "^4.0.1",
+    "pulp": "^8.1.0",
+    "purescript": "^0.8.0",
+    "react": "^0.14.7",
+    "react-router": "^2.0.0"
   }
 }
