--- a/bower.json
+++ b/bower.json
@@ -1,23 +1,16 @@
 {
   "name": "conchord-ui",
-  "version": "0.0.6",
-  "homepage": "https://github.com/yanhick/conchord-ui",
-  "authors": [
-    "yannick <yannick.dominguez@gmail.com>"
+  "version": "1.0.0",
+  "moduleType": [
+    "node"
   ],
-  "license": "MIT",
   "ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
-    "test",
-    "tests"
+    "output"
   ],
   "dependencies": {
-    "bootstrap-sass-official": "~3.3.4",
-    "fontawesome": "~4.5.0",
-    "purescript-console": "^0.1.1",
-    "purescript-prelude": "^0.1.4",
-    "purescript-eff": "^0.1.2"
+    "purescript-console": "^0.1.0"
   }
 }
