update travis for node.js

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,1 @@
-sudo: false
-language: haskell
-ghc: 7.8
-before_install:
-- gem install compass
-install:
-- npm install
-- cabal install cabal-install
-- cabal update
-- cabal install alex happy
-- cabal install --only-dependencies --enable-tests
-script:
-- npm test
-- $HOME/.cabal/bin/hlint server/src
-- cabal configure --enable-tests && cabal build && cabal test
-cache:
-  bundler: true
-  directories:
-  - node_modules
-  - bower_components
-  - $HOME/.cabal
+language: node_js
