--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "bower": "^1.3.12",
     "pulp": "^8.1.0",
-    "purescript": "^0.8.0"
+    "purescript": "^0.8.0",
+    "virtual-dom": "^2.1.1"
   }
 }
