--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "purescript-console": "^0.1.0",
     "purescript-halogen": "^0.6.0",
-    "purescript-generics": "^0.7.2"
+    "purescript-generics": "^0.7.2",
+    "purescript-affjax": "^0.13.0"
   }
 }
