--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "purescript-halogen": "^0.6.0",
     "purescript-generics": "^0.7.2",
     "purescript-affjax": "^0.13.0",
-    "purescript-routing": "^0.4.0"
+    "purescript-routing": "^0.4.0",
+    "purescript-prelude": "^0.1.5"
   }
 }
