--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "pulp test",
     "build": "pulp build",
-    "dev": "pulp server",
+    "dev-client": "pulp server",
+    "dev-server": "pulp -w --then \"node server\" build -m ServerMain -o server-output --src-path server",
     "release": "pulp browserify > dist && git add dist && git commit -m'release' && git push heroku master -f && git reset --hard HEAD~",
     "postinstall": "bower install"
   },
