--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "pulp": "^8.1.1",
     "purescript": "^0.8.3",
     "virtual-dom": "^2.1.1"
+  },
+  "dependencies": {
+    "express": "^4.13.4"
   }
 }
