fix travis build

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "pulp test",
-    "build": "pulp build",
-    "dev-client": "pulp server",
+    "build": "pulp browserify > app.js && pulp build -m ServerMain -o server-output --src-path server",
+    "dev-client": "pulp -w browserify > app.js",
     "dev-server": "pulp -w --then \"node server\" build -m ServerMain -o server-output --src-path server",
     "release": "pulp browserify > dist && git add dist && git commit -m'release' && git push heroku master -f && git reset --hard HEAD~",
     "postinstall": "bower install"
