--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "virtual-dom": "^2.1.1"
   },
   "dependencies": {
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2"
   }
 }
