--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "devDependencies": {
     "bower": "^1.3.12",
     "pulp": "^8.1.1",
-    "purescript": "^0.8.3",
-    "virtual-dom": "^2.1.1"
+    "purescript": "^0.8.3"
   },
   "dependencies": {
     "express": "^4.13.4",
