--- a/bower.json
+++ b/bower.json
@@ -19,5 +19,8 @@
     "purescript-express": "^0.3.3",
     "purescript-pux": "^4.1.0",
     "purescript-pux-devtool": "^2.0.3"
+  },
+  "devDependencies": {
+    "purescript-quickcheck": "^0.12.2"
   }
 }
