update script to push local branch to heroku

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "pulp browserify -t app.js -I common && pulp build -m Main -o server-output --src-path server -I common",
     "dev-client": "pulp -w browserify -t app.js -I common",
     "dev-server": "pulp -w --then \"node index\" build -m ServerMain -o server-output --src-path server -I common",
-    "release": "npm run build && git add app.js -f && git add server-output -f && git commit -m'release' && git push heroku master -f && git reset --hard HEAD^",
+    "release": "npm run build && git add app.js -f && git add server-output -f && git commit -m'release' && git push heroku HEAD:master -f && git reset --hard HEAD^",
     "postinstall": "bower install"
   },
   "author": "Yannick Dominguez",
