--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "purescript": "^0.8.3"
   },
   "dependencies": {
+    "bower": "^1.7.9",
     "express": "^4.13.4",
     "react": "^15.0.2",
     "react-dom": "^15.0.2"
