--- a/bower.json
+++ b/bower.json
@@ -11,16 +11,60 @@
     "output"
   ],
   "dependencies": {
-    "purescript-console": "^0.1.0",
-    "purescript-generics": "^0.7.2",
-    "purescript-affjax": "^0.13.0",
-    "purescript-routing": "^0.4.0",
-    "purescript-prelude": "^0.1.5",
-    "purescript-express": "^0.3.3",
-    "purescript-pux": "^4.1.0",
-    "purescript-pux-devtool": "^2.0.3"
+    "purescript-console": "^1.0.0",
+    "purescript-generics": "^1.0.1",
+    "purescript-affjax": "^1.1.0",
+    "purescript-routing": "^1.0.0",
+    "purescript-prelude": "^1.0.1",
+    "purescript-express": "6264dd4f279e1c468ae0401f66d0a30c05b135f7",
+    "purescript-pux": "^5.0.2",
+    "purescript-pux-devtool": "^3.0.0",
+    "purescript-parsing": "^1.0.0",
+    "purescript-options": "^1.0.0",
+    "purescript-easy-ffi": "^2.0.0"
   },
   "devDependencies": {
-    "purescript-quickcheck": "^0.12.2"
+    "purescript-quickcheck": "^1.0.0"
+  },
+  "resolutions": {
+    "purescript-console": "^1.0.0",
+    "purescript-prelude": "^1.0.1",
+    "purescript-eff": "^1.0.0",
+    "purescript-either": "^1.0.0",
+    "purescript-arrays": "^1.0.0",
+    "purescript-strings": "^1.0.0",
+    "purescript-aff": "^1.0.0",
+    "purescript-maps": "^1.1.0",
+    "purescript-lists": "^1.0.1",
+    "purescript-functions": "^1.0.0",
+    "purescript-transformers": "^1.0.0",
+    "purescript-exceptions": "^1.0.0",
+    "purescript-control": "^1.0.0",
+    "purescript-maybe": "~1.0.0",
+    "purescript-foreign": "^1.0.0",
+    "purescript-tuples": "^1.0.0",
+    "purescript-dom": "^1.1.0",
+    "purescript-nullable": "^1.0.1",
+    "purescript-integers": "^1.0.0",
+    "purescript-unsafe-coerce": "^1.0.0",
+    "purescript-math": "^2.0.0",
+    "purescript-unfoldable": "^1.0.0",
+    "purescript-foldable-traversable": "^1.0.0",
+    "purescript-lazy": "^1.0.0",
+    "purescript-st": "^1.0.0",
+    "purescript-monoid": "^1.0.0",
+    "purescript-tailrec": "^1.0.0",
+    "purescript-distributive": "^1.0.0",
+    "purescript-identity": "^1.0.0",
+    "purescript-bifunctors": "^1.0.0",
+    "purescript-invariant": "^1.0.0",
+    "purescript-parsing": "^1.0.0",
+    "purescript-contravariant": "^1.0.0",
+    "purescript-options": "^1.0.0",
+    "purescript-express": "6264dd4f279e1c468ae0401f66d0a30c05b135f7",
+    "purescript-node-buffer": "^1.0.0",
+    "purescript-node-streams": "^1.0.0",
+    "purescript-node-url": "^1.0.0",
+    "purescript-node-http": "^1.0.0"
   }
 }
