--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "purescript-pux": "^5.0.2",
     "purescript-parsing": "^1.0.0",
     "purescript-options": "^1.0.0",
-    "purescript-easy-ffi": "^2.0.0"
+    "purescript-easy-ffi": "^2.0.0",
+    "purescript-argonaut": "^1.0.0"
   },
   "devDependencies": {
     "purescript-quickcheck": "^1.0.0"
