--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "purescript-argonaut": "^1.0.0"
   },
   "devDependencies": {
-    "purescript-quickcheck": "^1.0.0"
+    "purescript-quickcheck": "^1.0.0",
+    "purescript-pux-devtool": "^3.0.0"
   },
   "resolutions": {
     "purescript-console": "^1.0.0",
