--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "clean": "rm -rf node_modules bower_components app.js server-output",
     "start": "node index.js",
     "test": "pulp test",
-    "build": "pulp browserify -t app.js -I common && pulp build -m Main -o server-output --src-path server -I common",
-    "dev-client": "pulp -w browserify -t app.js -I common",
-    "dev-server": "pulp -w --then \"node index\" build -m ServerMain -o server-output --src-path server -I common",
+    "build": "pulp browserify -t app.js -I src --src-path client -m Main && pulp build -m Main -o server-output --src-path server -I src",
+    "dev-client": "pulp -w browserify -t app.js -I src --src-path client -m Main",
+    "dev-server": "pulp -w --then \"node index\" build -m Main -o server-output --src-path server -I src",
     "release": "npm run build && git add app.js -f && git add server-output -f && git commit -m'release' && git push heroku HEAD:master -f && git reset --hard HEAD^",
     "postinstall": "bower install"
   },
