--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A UI for the conchord file format",
   "main": "index.js",
   "scripts": {
-    "clean": "rm -rf node_modules bower_components app.js server-output",
+    "clean": "rm -rf node_modules bower_components app.js server-output output",
     "start": "node index.js",
     "test": "pulp test",
     "build": "pulp browserify -t app.js -I src --src-path client && pulp build -o server-output --src-path server -I src",
