--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "purescript-argonaut": "^1.0.0",
     "purescript-node-fs": "^1.0.0",
     "purescript-globals": "^1.0.0",
-    "purescript-foreign-generic": "^1.0.0"
+    "purescript-foreign-generic": "^1.0.0",
+    "purescript-string-parsers": "^1.0.1"
   },
   "devDependencies": {
     "purescript-quickcheck": "^1.0.0",
