convert POSTed data to use x-form-urlencoded instead of json

--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "purescript-string-parsers": "^1.0.1",
     "purescript-strongcheck": "^1.1.1",
     "purescript-strongcheck-generics": "^0.4.0",
-    "purescript-node-postgres": "https://github.com/yanhick/purescript-node-postgres.git#3d58c0f618f2f202cd685ffc16cc6e98715ea969"
+    "purescript-node-postgres": "https://github.com/yanhick/purescript-node-postgres.git#3d58c0f618f2f202cd685ffc16cc6e98715ea969",
+    "purescript-form-urlencoded": "^1.0.0"
   },
   "devDependencies": {
     "purescript-quickcheck": "^1.0.0",
